smten/share/lib/Smten/Tests/ShouldFail/BadKind.smtn

module Smten.Tests.ShouldFail.BadKind where

foo :: Maybe Bool Integer
foo = error "huh?"

